--- a/theme/css/b4st.css
+++ b/theme/css/b4st.css
@@ -22,9 +22,9 @@
 
 
 
-Header logo
+/*Header logo
 If you require a Site title and a logo, an example of how to do this is provided below (use your own logo):
-
+*/
 #site-title a {
   display: inline-block;
 	padding-left 60px;
