--- a/theme/css/b4st.css
+++ b/theme/css/b4st.css
@@ -25,12 +25,15 @@
 /*Header logo
 If you require a Site title and a logo, an example of how to do this is provided below (use your own logo):
 */
-#site-title a {
+/*#site-title a {
   display: inline-block;
 	padding-left 60px;
   background: url('../../img/header.svg') 0 0 no-repeat;
-}
+}*/
 
+body {
+  background: url('../../img/background.jpg')
+}
 
 /* Main content */
 
