--- a/theme/css/b4st.css
+++ b/theme/css/b4st.css
@@ -32,12 +32,12 @@ If you require a Site title and a logo, an example of how to do this is provided
 }*/
 
 body {
-  background-image: url('../../img/background.jpg')
+  background-image: url('../../img/background.jpg');
 }
 
-#site-container {
+/*#site-container {
   background-image: url('../../img/background.jpg')
-}
+}*/
 
 /* Main content */
 
