--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,7 +39,7 @@ If you require a Site title and a logo, an example of how to do this is provided
 }*/
 
 body {
-  background: url('../../img/background.jpg');
+  background: url('./img/background.jpg');
 }
 
 /*#site-container {
