--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,11 @@
 // Import Bootstrap
 @import "bootstrap";
 
+@font-face {
+	font-family: 'Roman Caps';
+	src: url('./fonts/Roman_SD.ttf') format("truetype");
+}
+
  /* Max content widths */
 
 .size-auto, 
@@ -71,16 +76,29 @@ body {
 .sidebar {
   margin-top: 20px
 }
+
 .sidebar section {
-  margin-bottom: 40px
+  padding: 10px;
+  margin-bottom: 40px;
+  border: 4px solid #cd950c;
+  border-radius: 15px;
 }
+
 .sidebar ul,
 .sidebar ol {
   list-style-type: none;
   padding: 0
 }
 .sidebar li {
-  margin: 10px 0
+  margin: 10px 0;
+  font-family: Arial,Tahoma,Helvetica,FreeSans,sans-serif;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.sidebar h4 {
+	font-family: 'Roman Caps';
+	font-size: 1.1em;
 }
 
 /* Hide form placeholders on focus */
