try readjust sidebars

--- a/style.css
+++ b/style.css
@@ -14998,7 +14998,7 @@ If you require a Site title and a logo, an example of how to do this is provided
 /* line 186, sass/style.scss */
 .sidebar li {
   margin: 0;
-  padding: .2rem .5rem 0rem .5rem;
+  padding: .2rem .5rem .5rem .5rem;
   font-family: Arial,Tahoma,Helvetica,FreeSans,sans-serif;
   font-size: 0.6rem;
 }
