--- a/sass/style.scss
+++ b/sass/style.scss
@@ -262,6 +262,11 @@ article section a:visited {
 	color: #6d4195;
 }
 
+article h1, article h2, article h3, article h4, article h5, article h6 {
+	color: #d75800;
+	font-family: 'Libre Baskerville', serif;
+}
+
 
 // article blockquote[cite]:after {
 //   content: "-" attr(cite);
