--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,9 +6,21 @@
 @import "bootstrap-variables";
 // Import Bootstrap
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative|Gruppo|Inconsolata:400,700|Libre+Baskerville:400,400i,700|Merriweather:400,400i,700,700i|Rakkas|Roboto:400,400i,700,700i');// 	src: url('./fonts/Roman_SD.ttf') format("truetype");
+@import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative|Gruppo|Inconsolata:400,700|Libre+Baskerville:400,400i,700|Merriweather:400,400i,700,700i');// 	src: url('./fonts/Roman_SD.ttf') format("truetype");
 // }
 
+// Display glyphs code
+// use with :before
+@mixin font-awesome($content){
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    display: inline-block;
+    text-decoration: inherit;
+    content: $content;
+    position: relative;
+    left:-.2em;
+}
  /* Max content widths */
 
 .size-auto, 
@@ -36,6 +48,81 @@
   float: left;
 }
 
+
+nav .nav-link {
+	font-family: Georgia, serif;
+	font-weight: bold;
+	font-size: 1.1rem;
+}
+nav .dropdown-header {
+	font-family: 'Libre Baskerville', serif;
+	text-align: center;
+	font-weight: bold;
+	font-size: .9rem;
+}
+
+nav .dropdown-header:before {
+	content: "\2014";
+	position: relative;
+  left:-1em;
+}
+
+nav .dropdown-header:after {
+	content: "\2014";
+	position: relative;
+  left:1em;
+}
+
+nav .dropdown-item {
+	text-align: left;
+	font-family: 'Libre Baskerville', serif;
+	font-size: .7rem;
+}
+
+nav .dropdown-item.active {
+	color: #7f7f7f;
+	background-color: inherit;
+}
+
+nav .dropdown-menu a:hover {
+	background-color: #828282;
+}
+
+nav .dropdown-menu a.active:hover {
+	background-color: inherit;
+}
+
+nav .dropdown-menu a.menu-level-2 {
+	padding-left: 3em;
+}
+
+nav .dropdown-menu a.menu-level-2:before {
+	@include font-awesome("\f105");
+}
+
+nav .dropdown-menu a.menu-level-3 {
+	padding-left: 4em;
+}
+
+nav .dropdown-menu a.menu-level-3:before {
+	@include font-awesome("\f105\f105");
+}
+
+nav .dropdown-menu a.menu-level-4 {
+	padding-left: 5em;
+}
+
+nav .dropdown-menu a.menu-level-4:before {
+	@include font-awesome("\f105\f105\f105");
+}
+
+nav .dropdown-menu a.menu-level-5 {
+	padding-left: 6em;
+}
+
+nav .dropdown-menu a.menu-level-5:before {
+	@include font-awesome("\f105\f105\f105\f105");
+}
 
 /*Header logo
 If you require a Site title and a logo, an example of how to do this is provided below (use your own logo):
@@ -85,7 +172,7 @@ If you require a Site title and a logo, an example of how to do this is provided
 #content section {
   margin-bottom: .7rem;
   color: #aeaeae;
-  font-family: 'Merriweather', serif;
+  font-family: 'Merriweather', Verdana, Geneva, serif;
   font-size: .75rem;
 }
 #content footer {
@@ -118,7 +205,7 @@ If you require a Site title and a logo, an example of how to do this is provided
 .byline {
 	font-size: .8rem;
 	color: #666666;
-	font-family: 'Rakkas', cursive;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .author {
@@ -185,15 +272,58 @@ If you require a Site title and a logo, an example of how to do this is provided
 }
 .sidebar li {
 	margin: 0;
-  padding: .2rem .5rem .5rem .5rem;
+	padding: 0;
   font-family: Arial,Tahoma,Helvetica,FreeSans,sans-serif;
   font-size: 0.6rem;
 }
 
+.sidebar li a {
+	display: inline-block;
+	padding: .2em 0 .5em .5em;
+	margin: 0;
+	width: 100%;
+}
+
+.sidebar li li a {
+	padding-left: 1.5em;
+}
+
+.sidebar li li li a {
+	padding-left: 2.5em;
+}
+
+.sidebar li li li li a {
+	padding-left: 3.5em;
+}
+
+.sidebar li a:hover {
+	background-color: #bebebe;
+}
+
 .widget_links li {
 	border: 1px solid #747474;
-	padding: .2rem .5rem;
+	padding: 0;
+	margin: 0;
 }
+
+.widget_links li a:hover {
+	background-color: #bebebe !important;
+}
+
+
+
+
+
+li.faviroll a.faviroll {
+ padding:.125rem 0 .125rem calc(1.2em + 16px) !important;
+ position: relative;
+ background-position: .7em !important;
+ line-height:1.25rem;
+}
+
+/* You may here anhanced style the blogroll-links */
+.faviroll {}
+
 
 
 .sidebar h4 {
@@ -227,7 +357,7 @@ pre {
 // }
 
 article blockquote {
-	font-family: 'Roboto', sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
 	margin: 1rem .5rem 1rem .5rem;
 	padding: .5rem;
 	background-color: #3e3e3e;
@@ -265,8 +395,49 @@ article section a:visited {
 article h1, article h2, article h3, article h4, article h5, article h6 {
 	color: #d75800;
 	font-family: 'Libre Baskerville', serif;
+	text-align: center;
 }
 
+article section h1:after, article section h2:after, article section h3:after, article section h4:after, article section h5:after, article section h6:after {
+	content: ' ';
+	display:block;
+	width: 80%;
+	margin: auto;
+	border:1px solid #6c6c6c;
+	border-radius:4px;
+	// -webkit-border-radius:4px;
+	// -moz-border-radius:4px;
+	// box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+	// -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+	// -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, .05);
+	position: relative;
+	top: 3px;
+}
+
+
+article h1 {
+	font-size: 1.5rem;
+}
+
+article h2 {
+	font-size: 1.3rem;
+}
+
+article h3 {
+	font-size: 1.1rem;
+}
+
+article h4 {
+	font-size: 1rem;
+}
+
+article h5 {
+	font-size: .9rem;
+}
+
+article h6 {
+	font-size: .8rem;
+}
 
 // article blockquote[cite]:after {
 //   content: "-" attr(cite);
